--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,4 +18,8 @@
 # org.gradle.parallel=true
 
 android.useAndroidX=true
+MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=Java@123
+MYAPP_RELEASE_KEY_PASSWORD=Java@123
 android.enableJetifier=true
