--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "android-dev": "adb reverse tcp:8081 tcp:8081 && react-native run-android"
   },
   "dependencies": {
+    "native-base": "^2.12.1",
     "react": "16.8.6",
-    "react-native": "0.60.0"
+    "react-native": "0.60.0",
+    "react-native-linear-gradient": "^2.5.4",
+    "react-native-splash-screen": "^3.2.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.5.4",
