tabs for executor and fabricator

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,6 +34,10 @@ target 'fabApp' do
 
   pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
 
+  pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
+
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
   target 'fabAppTests' do
     inherit! :search_paths
     # Pods for testing
