--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "android-dev": "adb reverse tcp:8081 tcp:8081 && react-native run-android"
   },
   "dependencies": {
+    "jetifier": "^1.6.2",
     "native-base": "^2.12.1",
     "react": "16.8.6",
     "react-native": "0.60.0",
+    "react-native-gesture-handler": "^1.3.0",
     "react-native-linear-gradient": "^2.5.4",
+    "react-native-reanimated": "^1.1.0",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-tab-view": "^2.0.1",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^2.0.1"
   },
@@ -28,6 +32,9 @@
     "react-test-renderer": "16.8.6"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupFiles": [
+      "./node_modules/react-native-gesture-handler/jestSetup.js"
+    ]
   }
 }
