--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,7 +34,7 @@ target 'fabApp' do
 
   pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
 
-  # pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
+  # pod 'RNReanimated', :path => '../node_modules/ '
 
   # pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
 
