--- a/package.json
+++ b/package.json
@@ -29,9 +29,6 @@
     "react-test-renderer": "16.8.6"
   },
   "jest": {
-    "preset": "react-native",
-    "setupFiles": [
-      "./node_modules/react-native-gesture-handler/jestSetup.js"
-    ]
+    "preset": "react-native"
   }
 }
