--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.60.0",
     "react-native-linear-gradient": "^2.5.4",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-star-rating": "^1.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^2.0.1"
   },
