--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "android-dev": "adb reverse tcp:8081 tcp:8081 && react-native run-android"
   },
   "dependencies": {
+    "immutability-helper": "^3.0.1",
     "jetifier": "^1.6.2",
     "native-base": "^2.12.1",
     "react": "16.8.6",
     "react-native": "0.60.0",
+    "react-native-image-pan-zoom": "^2.1.11",
     "react-native-linear-gradient": "^2.5.4",
     "react-native-splash-screen": "^3.2.0",
     "react-native-star-rating": "^1.1.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^2.0.1"
+    "react-navigation": "^2.0.1",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-actions": "^2.6.5",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "7.5.4",
