--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "android-dev": "adb reverse tcp:8081 tcp:8081 && react-native run-android"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "immutability-helper": "^3.0.1",
     "jetifier": "^1.6.3",
     "native-base": "^2.12.1",
