--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -164,6 +164,8 @@ android {
 }
 
 dependencies {
+    implementation project(':rn-fetch-blob')
+    implementation project(':react-native-document-picker')
     implementation project(':react-native-gesture-handler')
     implementation project(':react-native-reanimated')
     implementation project(':react-native-linear-gradient')
