--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,6 +38,12 @@ target 'fabApp' do
 
   # pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
 
+  pod 'react-native-document-picker', :path => '../node_modules/react-native-document-picker'
+
+  pod 'ReactNativePermissions', :path => '../node_modules/react-native-permissions'
+
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
   target 'fabAppTests' do
     inherit! :search_paths
     # Pods for testing
