--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "android-dev": "adb reverse tcp:8081 tcp:8081 && react-native run-android"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.1",
     "axios": "^0.19.0",
     "immutability-helper": "^3.0.1",
     "jetifier": "^1.6.3",
     "native-base": "^2.12.1",
     "react": "16.8.6",
     "react-native": "0.60.0",
+    "react-native-document-picker": "^3.2.4",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-pan-zoom": "^2.1.11",
     "react-native-linear-gradient": "^2.5.4",
+    "react-native-permissions": "^1.2.0",
     "react-native-reanimated": "^1.1.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-star-rating": "^1.1.0",
@@ -28,7 +31,8 @@
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.0.5"
+    "redux-saga": "^1.0.5",
+    "rn-fetch-blob": "^0.10.16"
   },
   "devDependencies": {
     "@babel/core": "7.5.4",
