--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-linear-gradient": "^2.5.4",
     "react-native-permissions": "^1.2.0",
     "react-native-reanimated": "^1.1.0",
+    "react-native-scrollable-tab-view": "^0.10.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-star-rating": "^1.1.0",
     "react-native-tab-view": "^2.10.0",
