--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -164,6 +164,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-firebase')
     implementation project(':rn-fetch-blob')
     implementation project(':react-native-document-picker')
     implementation project(':react-native-gesture-handler')
@@ -173,6 +174,10 @@ dependencies {
     implementation project(':react-native-splash-screen')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation "com.google.android.gms:play-services-base:16.1.0"
+    implementation "com.google.firebase:firebase-core:16.0.9"
+     implementation "com.google.firebase:firebase-messaging:18.0.0"
+    implementation 'me.leolin:ShortcutBadger:1.1.21@aar' 
 
     // JSC from node_modules
     if (useIntlJsc) {
@@ -190,3 +195,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+apply plugin: "com.google.gms.google-services";
+// com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
