--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "jetifier": "^1.6.3",
     "native-base": "^2.12.1",
     "react": "16.8.6",
-    "react-native": "0.60.0",
+    "react-native": "^0.60.3",
     "react-native-document-picker": "^3.2.4",
+    "react-native-firebase": "^5.5.5",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-pan-zoom": "^2.1.11",
     "react-native-linear-gradient": "^2.5.4",
